--- a/ConfigServerApplication/pom.xml
+++ b/ConfigServerApplication/pom.xml
@@ -36,14 +36,15 @@
           <version>1.1.2.RELEASE</version>
        </dependency>
        <dependency>
-          <groupId>org.springframework.boot</groupId>
-          <artifactId>spring-boot-starter-security</artifactId>
-          <version>1.4.0.RELEASE</version>
-      </dependency>
+          <groupId>org.springframework.cloud</groupId>
+          <artifactId>spring-cloud-config-server</artifactId>
+          <version>2.0.2.RELEASE</version>
+       </dependency>
+      
       <dependency>
-         <groupId>org.springframework.boot</groupId>
-         <artifactId>spring-boot-starter-web</artifactId>
-         <version>1.4.0.RELEASE</version>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-web</artifactId>
+          <version>2.1.2.RELEASE</version>
       </dependency>
       
       <dependency>
